src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>大型屈光商机销售流程</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>意向阶段</fullName>
        </values>
        <values>
            <fullName>成交阶段</fullName>
        </values>
        <values>
            <fullName>潜在阶段</fullName>
        </values>
        <values>
            <fullName>立项阶段</fullName>
        </values>
        <values>
            <fullName>认可阶段</fullName>
        </values>
        <values>
            <fullName>谈判阶段</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>大型欧堡商机销售流程</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>意向阶段</fullName>
        </values>
        <values>
            <fullName>成交阶段</fullName>
        </values>
        <values>
            <fullName>潜在阶段</fullName>
        </values>
        <values>
            <fullName>立项阶段</fullName>
        </values>
        <values>
            <fullName>认可阶段</fullName>
        </values>
        <values>
            <fullName>谈判阶段</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>常规商机销售流程</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>意向阶段</fullName>
        </values>
        <values>
            <fullName>成交阶段</fullName>
        </values>
        <values>
            <fullName>潜在阶段</fullName>
        </values>
        <values>
            <fullName>立项阶段</fullName>
        </values>
        <values>
            <fullName>认可阶段</fullName>
        </values>
        <values>
            <fullName>谈判阶段</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>技术服务销售流程</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>合同签订中</fullName>
        </values>
        <values>
            <fullName>失去</fullName>
        </values>
        <values>
            <fullName>已签合同</fullName>
        </values>
        <values>
            <fullName>未启动</fullName>
        </values>
        <values>
            <fullName>项目启动</fullName>
        </values>
        <values>
            <fullName>项目推进</fullName>
        </values>
        <values>
            <fullName>项目谈判</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AccountNature__c</fullName>
        <label>客户性质</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActingTenderingCompany__c</fullName>
        <label>代理投标公司</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AmountWeight__c</fullName>
        <formula>IF( ISPICKVAL(WinRate__c, &quot;80%&quot;) , 0.8* Amount ,  IF(ISPICKVAL(WinRate__c, &quot;30%&quot;) , 0.3* Amount,  IF(ISPICKVAL(WinRate__c, &quot;50%&quot;), 0.5* Amount,  IF(ISPICKVAL(WinRate__c, &quot;70%&quot;) , 0.7* Amount,  IF(ISPICKVAL(WinRate__c, &quot;100%&quot;) , 1* Amount, null) ) ) ) )</formula>
        <label>权重金额</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <formula>TEXT( Account.area__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>区域</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BiddingCompany__c</fullName>
        <label>中标公司</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessOpportunityApprovalStatus__c</fullName>
        <label>销售机会审批状态</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>草稿</fullName>
                    <default>true</default>
                    <label>草稿</label>
                </value>
                <value>
                    <fullName>待审批</fullName>
                </value>
                <value>
                    <fullName>已审批</fullName>
                </value>
                <value>
                    <fullName>已拒绝</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BusinessPhase__c</fullName>
        <label>商机阶段</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>潜在阶段</fullName>
                </value>
                <value>
                    <fullName>意向阶段</fullName>
                </value>
                <value>
                    <fullName>立项阶段</fullName>
                </value>
                <value>
                    <fullName>认可阶段</fullName>
                </value>
                <value>
                    <fullName>谈判阶段</fullName>
                </value>
                <value>
                    <fullName>成交阶段</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BusinessSource__c</fullName>
        <label>商机来源</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>专家推荐</fullName>
                </value>
                <value>
                    <fullName>学术会议</fullName>
                </value>
                <value>
                    <fullName>主动拜访</fullName>
                </value>
                <value>
                    <fullName>渠道</fullName>
                </value>
                <value>
                    <fullName>内部交流</fullName>
                </value>
                <value>
                    <fullName>网路信息</fullName>
                </value>
                <value>
                    <fullName>同行交流</fullName>
                </value>
                <value>
                    <fullName>竞品预警</fullName>
                </value>
                <value>
                    <fullName>其他</fullName>
                    <label>线索池</label>
                </value>
                <value>
                    <fullName>客户资产</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BusinessType__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>是否是大项目</inlineHelpText>
        <label>商机类型</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bxsb__c</fullName>
        <label>保修设备</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AMARIS 1050RS</fullName>
                </value>
                <value>
                    <fullName>AMARIS</fullName>
                </value>
                <value>
                    <fullName>AMARIS 500E/Compact</fullName>
                </value>
                <value>
                    <fullName>P200</fullName>
                </value>
                <value>
                    <fullName>200TX</fullName>
                </value>
                <value>
                    <fullName>Daytona</fullName>
                </value>
                <value>
                    <fullName>VX120</fullName>
                </value>
                <value>
                    <fullName>Keratron/Keratron Scout</fullName>
                </value>
                <value>
                    <fullName>Combi</fullName>
                </value>
                <value>
                    <fullName>Irx3</fullName>
                </value>
                <value>
                    <fullName>Sirius</fullName>
                </value>
                <value>
                    <fullName>AMARIS 750S</fullName>
                </value>
                <value>
                    <fullName>ESIRIS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CJDate__c</fullName>
        <formula>DATEVALUE( FinalCustomer__r.CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>最终用户：创建时间</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLDate__c</fullName>
        <formula>FinalCustomer__r.FoundingTime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>最终用户：成立时间</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>市/区</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClosedDateYear__c</fullName>
        <formula>YEAR( CloseDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>预计成交日期年份</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ClosedList__c</fullName>
        <description>针对丢单和中断的机会说明。</description>
        <label>关单说明</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClosingCost__c</fullName>
        <label>选配组件成交价</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <label>竞争对手</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ComponentName__c</fullName>
        <label>选配组件名称</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomLevel__c</fullName>
        <label>客户等级</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerAssets__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>客户资产</label>
        <referenceTo>CustomerAssets__c</referenceTo>
        <relationshipLabel>业务机会</relationshipLabel>
        <relationshipName>CustomerAssets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomerConfirmed__c</fullName>
        <label>客户是否确认</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>是</fullName>
                </value>
                <value>
                    <fullName>否</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DB_Competitor__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and can delete this field.</description>
        <label>DB Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor A</fullName>
                </value>
                <value>
                    <fullName>Competitor B</fullName>
                </value>
                <value>
                    <fullName>Competitor C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DXConNum__c</fullName>
        <label>大型配置单数量</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DateOverwarranty__c</fullName>
        <label>设备过保日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DeleteProductReason__c</fullName>
        <label>删除产品原因</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DescriptionConfiguration__c</fullName>
        <label>配置及商务条款说明</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>针对正常推进的销售机会说明。</description>
        <label>说明</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DetailedDescription__c</fullName>
        <label>丢单详细描述</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DetailedScheme__c</fullName>
        <label>详细保修方案</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DomesticGeneralAgent__c</fullName>
        <label>国内总代公司</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndCity__c</fullName>
        <formula>TEXT(FinalCustomer__r.city__c)</formula>
        <label>最终用户：市</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndHospital__c</fullName>
        <formula>TEXT(FinalCustomer__r.NewAccount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>最终用户：新建医院</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndTime__c</fullName>
        <formula>EquipmentSerialNumber__r.warrantyEnd__c</formula>
        <label>设备保修结束日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EndUserCategory__c</fullName>
        <formula>TEXT(FinalCustomer__r.AccountType__c)</formula>
        <label>最终用户：客户类别</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndUserCounty__c</fullName>
        <formula>FinalCustomer__r.Cunty__c</formula>
        <label>最终用户：县/县级市</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndUserLevel__c</fullName>
        <formula>TEXT(FinalCustomer__r.Grade__c)</formula>
        <label>最终用户：客户性质等级</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndUserNature__c</fullName>
        <formula>TEXT(FinalCustomer__r.AccountNature__c)</formula>
        <label>最终用户：客户性质</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EquipmentSerialNumber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>设备序列号</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>Equipment__c.customer__r.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipLabel>销售机会</relationshipLabel>
        <relationshipName>XSJH9KiY</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EuropeanStage__c</fullName>
        <formula>IF( text(StageName)==&quot;潜在阶段&quot;, &quot;1：明确新建医院;2：发现潜在机会。&quot;, IF( text(StageName)==&quot;意向阶段&quot;,&quot;1：了解客户的预算；2：挖掘到客户的需求意向；3：接洽主要决策人。&quot;, IF( text(StageName)==&quot;立项阶段&quot;,&quot;客户预算/计划已批。&quot;, IF( text(StageName)==&quot;认可阶段&quot;,&quot;1：关键人/决策人给出承诺；2：招标/谈判时间已确定。&quot;, IF( text(StageName)==&quot;谈判阶段&quot;,&quot;商务谈判结束/中标。&quot;, IF( text(StageName)==&quot;成交阶段&quot;,&quot;签约。&quot;,null))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>大型阶段标志</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fie1ld3111__c</fullName>
        <formula>RecordType.Name</formula>
        <label>销售机会记录类型</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <formula>Owner.LfourDepartment__c</formula>
        <label>销售机会所有人四级部门</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <formula>TODAY() - CloseDate</formula>
        <label>超期天数</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinalCustomer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>最终用户名称</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>销售机会</relationshipLabel>
        <relationshipName>FinalCustomer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinalProvince__c</fullName>
        <formula>TEXT(FinalCustomer__r.province__c)</formula>
        <label>最终用户：省/直辖市</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HammerPrice__c</fullName>
        <label>最终成交价</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HighNoteRecords__c</fullName>
        <label>厂牌</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncludedIncome__c</fullName>
        <formula>MonthlyPrice__c * IncomeMonths__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>计入收入</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IncludedMonth__c</fullName>
        <formula>EquipmentSerialNumber__r.Field6__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>计入收入月份</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IncomeMonths__c</fullName>
        <formula>12- IncludedMonth__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>计入收入月数</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ItemType__c</fullName>
        <label>项目类型</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>新签无约定价格</fullName>
                </value>
                <value>
                    <fullName>新签有约定价格</fullName>
                </value>
                <value>
                    <fullName>续签</fullName>
                </value>
                <value>
                    <fullName>回款</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JPUnitPrice__c</fullName>
        <label>单价（元）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JZDS1__c</fullName>
        <label>竞争对手1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JZDS2__c</fullName>
        <label>竞争对手2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JZDS3__c</fullName>
        <label>竞争对手3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JZJX1__c</fullName>
        <label>竞争机型1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JZJX2__c</fullName>
        <label>竞争机型2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JZJX3__c</fullName>
        <label>竞争机型3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeyAction__c</fullName>
        <formula>IF( text(StageName)==&quot;潜在阶段&quot;, &quot;1：了解行业信息；2：了解客户组织架构；3：了解客户对产品/设备的认可度；4：了解客户的设备使用年限；5：是否有产品/设备购买需求。&quot;, IF( text(StageName)==&quot;意向阶段&quot;,&quot;1:准确了解客户的预算；2:通过临床需求、相关产品及竞品的信息深入交流，进一步确认客户对产品的准确定位；3:进行与竞争对手优劣势分析、确立竞争策略并形成销售计划；4:明确清晰客户的购买决策流程和决策人、关键人（使用者/科室主任/院长），并与决策者初步建立沟通。&quot;, IF( text(StageName)==&quot;立项阶段&quot;,&quot;1：确定预算已批；2：针对决策者的需求有针对性的介绍方案，保证使用者和技术专家支持决策者推行方案；3：与影响者建立好的印象，确保其不反对；4：了解竞争对手的方案和报价；5：了解客户的价格预期和商务条款。&quot;, IF(text(StageName)==&quot;认可阶段&quot;,&quot;1：消弱客户内部的反对意见及竞争对手对客户的影响，客户确认产品方案；2：针对客户需求，输出相应商务解决方案；3：与客户基本达成一致意见，形成合作意向；4：采用客户推荐的代理商或客户认可我方推荐的代理商（适用于公立医院）。&quot;, IF( text(StageName)==&quot;谈判阶段&quot;,&quot;1：已有谈判方案或谈判策略；2：确定商务细节：价格、付款方式、交付、维保等内容。&quot;, IF( text(StageName)==&quot;成交阶段&quot;,&quot;正式合同文本已签署并制定回款计划。&quot;,null))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>关键行动内容</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeyContent__c</fullName>
        <formula>IF( text(StageName)==&quot;潜在阶段&quot;, &quot;1:了解客户背景;2:了解客户对产品/设备的认可度;3:是否有产品/设备购买需求.&quot;, IF( text(StageName)==&quot;意向阶段&quot;,&quot;1:准确了解客户的预算;2:通过临床需求、相关产品及竞品的信息深入交流，进一步确认客户对产品的准确定位;3:明确清晰客户的购买决策流程和决策人、关键人（使用者/科室主任/院长），并与决策者初步建立沟通.&quot;, IF( text(StageName)==&quot;立项阶段&quot;,&quot;1:确定预算已批；2:针对决策者的需求有针对性的介绍方案，保证使用者和技术专家支持决策者推行方案；3:与影响者建立好的印象，确保其不反对；4:了解竞争对手的方案和报价；5:了解客户的价格预期和商务条款.&quot;, IF(text(StageName)==&quot;认可阶段&quot;,&quot;1:消弱客户内部的反对意见及竞争对手对客户的影响，客户确认产品方案；2:针对客户需求，输出相应商务解决方案；3:与客户基本达成一致意见，形成合作意向；4:采用客户推荐的代理商或客户认可我方推荐的代理商（适用于公立医院）.&quot;, IF( text(StageName)==&quot;谈判阶段&quot;,&quot;1:已有谈判方案或谈判策略；2:确定商务细节：价格、付款方式、交付、维保等内容.&quot;, IF( text(StageName)==&quot;成交阶段&quot;,&quot;正式合同文本已签署并制定回款计划.&quot;,null))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>屈光关键行动内容</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModelNumber__c</fullName>
        <label>型号</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MonthlyPrice__c</fullName>
        <formula>IF( ISBLANK(HammerPrice__c) = TRUE , HammerPrice__c / 12, WarrantyQuotation__c / 12 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>月保修单价</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunities1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>主销售机会</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>只能选择主销售机会！</errorMessage>
            <filterItems>
                <field>Opportunity.isParent__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities11_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OpportunityClosingTime__c</fullName>
        <label>机会关闭时间</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OpportunityCycle__c</fullName>
        <formula>OpportunityClosingTime__c -  DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>销售机会周期（天）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OwnEmail__c</fullName>
        <formula>Owner.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>所有人邮箱</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartNumber__c</fullName>
        <label>选配组件编号</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProcurementMethod__c</fullName>
        <label>采购方式</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>院内采购</fullName>
                </value>
                <value>
                    <fullName>招投标</fullName>
                </value>
                <value>
                    <fullName>融资租赁</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductLine__c</fullName>
        <label>产品线</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductLinesNumber__c</fullName>
        <label>产品线个数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductName__c</fullName>
        <label>产品名称</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectDifficulty__c</fullName>
        <label>项目难点</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Province__c</fullName>
        <label>省/直辖市</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PushCount__c</fullName>
        <label>PushCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QUANTITY__c</fullName>
        <label>数量</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuotedPrice__c</fullName>
        <label>选配组件报价</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ReceivableProgress__c</fullName>
        <label>回款进展</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>未开票</fullName>
                </value>
                <value>
                    <fullName>已开票</fullName>
                </value>
                <value>
                    <fullName>已回款</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RelatedActivities__c</fullName>
        <label>相关销售活动</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remark__c</fullName>
        <label>备注</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOpportunityStatus__c</fullName>
        <label>销售机会关闭状态</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>丢单</fullName>
                </value>
                <value>
                    <fullName>中断</fullName>
                </value>
                <value>
                    <fullName>赢单</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StageSuccess__c</fullName>
        <formula>IF( text(StageName)==&quot;潜在阶段&quot;, &quot;1：明确新建医院;2：发现潜在销售机会。&quot;, IF( text(StageName)==&quot;意向阶段&quot;,&quot;1：了解客户的预算；2：挖掘到客户的需求意向；3：接洽主要决策人。&quot;, IF( text(StageName)==&quot;立项阶段&quot;,&quot;1：客户立项，确认购买；2：客户预算/计划已批。&quot;, IF( text(StageName)==&quot;认可阶段&quot;,&quot;1：关键人/决策人给出承诺；2：招标/谈判时间已确定；3：客户采用了高视提供的设备参数（适用于公立医院）。&quot;, IF( text(StageName)==&quot;谈判阶段&quot;,&quot;商务谈判&quot;, IF( text(StageName)==&quot;成交阶段&quot;,&quot;已中标/签约&quot;,null))))))</formula>
        <label>常规阶段标志</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TenderPrice__c</fullName>
        <label>中标价格</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ThrowReason__c</fullName>
        <label>丢单原因</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SalesOpportunityStatus__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>价格</fullName>
                </value>
                <value>
                    <fullName>品牌</fullName>
                </value>
                <value>
                    <fullName>客户关系</fullName>
                </value>
                <value>
                    <fullName>项目中断</fullName>
                </value>
                <value>
                    <fullName>策略及打包</fullName>
                </value>
                <value>
                    <fullName>其他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TimeInstallation__c</fullName>
        <inlineHelpText>例如：全款已付，预计12月19日安装。</inlineHelpText>
        <label>预计装机日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TotalAmount__c</fullName>
        <label>预计成交总金额（元）</label>
        <summarizedField>CustomObject18__c.TotalMoney__c</summarizedField>
        <summaryFilterItems>
            <field>CustomObject18__c.State__c</field>
            <operation>notEqual</operation>
            <value>丢单, 中断</value>
        </summaryFilterItems>
        <summaryForeignKey>CustomObject18__c.Field1__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>WarrantyModel__c</fullName>
        <label>推荐保修模式</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3年全保</fullName>
                    <default>true</default>
                    <label>3年全保</label>
                </value>
                <value>
                    <fullName>技术保修</fullName>
                </value>
                <value>
                    <fullName>1年全保</fullName>
                </value>
                <value>
                    <fullName>5年全保</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WarrantyQuotation__c</fullName>
        <label>保修项目报价</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WinRate__c</fullName>
        <label>赢单率</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>30%</fullName>
                </value>
                <value>
                    <fullName>50%</fullName>
                </value>
                <value>
                    <fullName>70%</fullName>
                </value>
                <value>
                    <fullName>80%</fullName>
                </value>
                <value>
                    <fullName>100%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WinningReason__c</fullName>
        <label>竞争对手中标原因</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>XSID__c</fullName>
        <displayFormat>{YYYY}{00000}</displayFormat>
        <label>销售机会编号</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ZBUnitType__c</fullName>
        <label>中标设备型号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpzj__c</fullName>
        <label>预计成交总金额（停用）（元）</label>
        <summarizedField>OpportunityLineItem.cpzje__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>erjibumen__c</fullName>
        <formula>Owner.SecondarySector__c</formula>
        <label>二级部门</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isParent__c</fullName>
        <formula>IF(Opportunities1__c == null, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isParent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>jdxspzt__c</fullName>
        <label>阶段性审批状态</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>草稿</fullName>
                    <default>true</default>
                    <label>草稿</label>
                </value>
                <value>
                    <fullName>待审批</fullName>
                </value>
                <value>
                    <fullName>已审批</fullName>
                </value>
                <value>
                    <fullName>已拒绝</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>jpTOTALAMOUNT__c</fullName>
        <formula>QUANTITY__c  *  JPUnitPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>总金额</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>next_step__c</fullName>
        <label>下一步方案</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfsdke__c</fullName>
        <formula>text(Account.BigCustomer__c)</formula>
        <label>是否是大客户</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sjc__c</fullName>
        <formula>DATETIMEVALUE(TODAY())- DATETIMEVALUE(CreatedDate)</formula>
        <label>销售机会天数(天）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>week__c</fullName>
        <formula>MOD( FLOOR( ( DATEVALUE(  LastModifiedDate )  -  DATEVALUE(&quot;2018-01-01&quot;)  ) / 7) ,52)  + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>第几周</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xsjhsyzsjbm__c</fullName>
        <formula>Owner.TertiarySector__c</formula>
        <label>销售机会所有者三级部门</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>year__c</fullName>
        <formula>YEAR(   DATEVALUE(CreatedDate)       )  -  YEAR( TODAY() )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>是否为本年</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ywjh__c</fullName>
        <formula>CreatedBy.Profile.Name</formula>
        <label>销售机会所有人简档</label>
        <type>Text</type>
    </fields>
</CustomObject>